--- a/public/views/game.html
+++ b/public/views/game.html
@@ -1,16 +1,14 @@
 <div>
-{{sceneinfo.storynumber}} and {{sceneinfo.scenenumber}}
+{{fullUrl}}
     <!--
 	<h1>Game Page</h1>
 	<p>This is coming from the controller: {{ tagline }}</p>
 -->
-<!--
     <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
         <iframe frameborder="0" height="100%" width="100%" 
-            src="https://youtube.com/embed/x4JKxst4N7U?autoplay=1&controls=0&showinfo=0&autohide=1">
+            ng-src="{{escapedUrl}}">
         </iframe>
     </div>
--->
     <div id="questionhint">
         This is the question
     </div>
