Got the selector all working to go to start of story

--- a/public/views/editor.html
+++ b/public/views/editor.html
@@ -2,11 +2,18 @@
 	
     <h1>Editor</h1>
     x4JKxst4N7U<br>
+    AimNVUryJKo<br>
+    9sHpHgsDryM<br>
+    https://www.google.com.au/search?http://www.richalawgroup.com/images/ContractLaw_04.jpg<br>
+    http://www.lawsessions.com/includes/modules/extra/videos/thumbnail.php?subject=contract-law<br>
+    http://www.seqlegal.com/sites/default/files/handshake3.png<br>
+    
 
 <!--    note that MAYBE I will have to put the 'label' tags around the entire line, like in the angularjs documentation-->
     <label>Story Number: </label><input type="number" ng-model="newScene.storynumber"><br>
     <label>Scene Number: </label><input type="number" ng-model="newScene.scenenumber"><br>
     <label>Resource: </label><input type="text" ng-model="newScene.resource"><br>
+    <label>Thumbnail: </label><input type="text" ng-model="newScene.thumbnail"><br>
 <!--
     <label>Title: </label><input type="text" ng-model="newScene.title"><br>
     <label>Question: </label><br><textarea rows="4" cols="50" ng-model="newScene.question"></textarea><br>
