--- a/public/views/selector.html
+++ b/public/views/selector.html
@@ -1,14 +1,12 @@
 <div class="jumbotron text-center">
 	<h1>Selector</h1>
 
-	<p>{{ tagline }}</p>
-    <p>I am in the selector, and this is written directly in the html</p>
-    <div>first bit of resolved scenes, from html. Here is the actual angular part:{{resolvedScenes}}</div>
+    <div>first bit of resolved scenes, from html. Here is the actual angular part:{{scenes}}</div>
    <hr>
     <div class="container">
-         <div class="card" ng-repeat="scene in resolvedScenes">
-          <story-info info="scene"></story-info>
-          <button class="btn" ng-click="play()">Play</button>
+         <div class="card" ng-repeat="s in scenes">
+             <story-info info="s"></story-info>
+          <button class="btn" ng-click="play(s)">Play</button>
         </div>
       </div>
 </div>
