--- a/public/css/style.css
+++ b/public/css/style.css
@@ -161,3 +161,25 @@ padding: 3em 2em;
     width: 340px;
     height: 240px;
 }
+
+#reaper {
+
+    background-image: url("./../img/grimreaper.gif");
+    background-repeat: no-repeat;
+    position:absolute;
+    height:100%;
+    width:100%;
+/*
+    top:0; right:0;
+    bottom:0; left:0;
+*/
+    background-size:contain;
+}
+
+/*
+#death {
+    background-color: #7A8E9D;
+    position: relative;
+}
+*/
+
