--- a/public/views/game.html
+++ b/public/views/game.html
@@ -1,6 +1,6 @@
 <div>
     <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
-        <iframe frameborder="0" height="100%" width="100%" 
+        <iframe id = "player" type="text/html" frameborder="0" height="100%" width="100%" 
             ng-src="{{escapedUrl}}">
         </iframe>
     </div>
@@ -11,9 +11,7 @@
         Type authority here
     </div>
     <div id="answer">
-        <label><input type="radio" ng-model="answer.one" value="answer1">Answer 1</label><br/>
-        <label><input type="radio" ng-model="answer.two" value="answer2">Answer 2</label><br/>
-        <label><input type="radio" ng-model="answer.three" value="answer3">Answer 3</label><br/>
-        <label><input type="radio" ng-model="answer.four" value="answer4">Answer 4</label><br/>
+        <label><input type="radio" ng-model="answer.one" value="correct">Correct answer for story {{sceneInfo.storynumber}} question {{sceneInfo.scenenumber}}</label><br/>
+        <label><input type="radio" ng-model="answer.two" value="incorrect">Incorrect answer</label><br/>
     </div>
 </div>
