Failed attempt at making timer directive work

--- a/public/views/editor.html
+++ b/public/views/editor.html
@@ -1,6 +1,7 @@
 <div class="jumbotron text-center">
 	
     <h1>Editor</h1>
+    Cat sample vid: P-K6uyr8oa4<br>
     x4JKxst4N7U<br>
     AimNVUryJKo<br>
     9sHpHgsDryM<br>
