--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,3 +4,10 @@
 	<p>{{ tagline }}</p>
     <button ng-click="login()">Login</button>
 </div>
+
+<!--
+
+<div>
+<timer countdown="3" interval="1000" finish-callback="callbackTimer.finished()">{{seconds}} second{{secondsS}}</timer>
+</div>
+-->
